README file changed

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Basic search engine created along with Udacity CS 101 course.
+Creation of Basic search engine. This project is still in its very intital stages. I am hoping it will come to a basic functional stage in next 4-5 weeks.
