--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-Creation of Basic search engine. This project is still in its very intital stages. I am hoping it will come to a basic functional stage in next 4-5 weeks.
+Creation of Basic search engine. This project is still in its very initial stages. I am hoping it will come to a basic functional stage in next 4-5 weeks.
+
+web_crawler.py (File that contains all the code for the web crawler)
+crawl_web.py (Initial developed web crawling file)
+crawl_web_maxdepth.py (crawling the web page upto a given depth starting from seed page)
+crawl_web_maxpages.py (crawling the web page upto a given number of pages starting from seed page)
+add_to_index.py (adds the given url and the keywords to the given data structure)
+lookup_index.py (return the urls associated with the given keyword)
